src/components/search-box/search-box.css
:host {
  display: block;
}

form {
  width: 100%;
  --font-size: 16px;
  --border-radius: 24px;
  --icon-size: 20px;
  --icon-margin: 8px;
  --suggestion-margin: 5px;
  --border: 1px solid var(--background-color);
  --transition: 0.2s cubic-bezier(0.4, 0, 0.2, 1);
}

form.light {
  --box-shadow-color: rgba(32, 33, 36, 0.28);
  --box-shadow: 0 1px 6px var(--box-shadow-color);
  --background-color: #dfe1e5;
  --background-hover: #ffffff;
  --border-color: transparent;
  --icon-color: rgba(32, 33, 36, 0.5);
  --icon-hover: rgba(32, 33, 36, 0.8);
  --suggestion-color: rgba(32, 33, 36, 0.7);
  --suggestion-hover: #000000;
  --font-color: #000000;
}

form.dark {
  --background-color: #202124;
  --background-hover: #303134;
  --box-shadow: 0 1px 6px 0 #171717;
  --border-color: rgba(223, 225, 229, 0);
  --icon-color: #bdc1c6;
  --icon-hover: #e5eaf0;
  --suggestion-color: var(--icon-color);
  --suggestion-hover: #ffffff;
  --font-color: #ffffff;
}

.sm {
  height: 35px;
  --icon-size: 15px;
  --font-size: 14px;
  --border-radius: 20px;
}

.md {
  height: 44px;
}

.lg {
  height: 65px;
  --icon-size: 22px;
  --font-size: 18px;
  --border-radius: 32px;
  --icon-margin: 16px;
  --suggestion-margin: 10px;
}

/* 
  LIGHT THEME
*/
.container {
  border: var(--border);
  display: flex;
  height: 100%;
  background-color: var(--background-color);
  transition: all var(--transition);
}

.container:hover {
  background-color: var(--background-hover);
  box-shadow: var(--box-shadow);
  border-color: var(--border-color);
}

.rounded {
  border-radius: var(--border-radius);
}

.rectangle {
  border-radius: 0;
}

.icon-container {
  width: var(--icon-size);
  height: var(--icon-size);
  margin: auto var(--icon-margin) auto var(--icon-margin);
  cursor: pointer;
}

.search-icon,
.cancel-icon {
  color: var(--icon-color);
  transition: color var(--transition);
}

.search-icon:hover,
.cancel-icon:hover {
  color: var(--icon-hover);
}

.input-container {
  flex: 1;
  display: flex;
  flex-wrap: wrap;
}

.input-container input {
  background-color: transparent;
  border: none;
  margin: 0;
  padding: 0;
  word-wrap: break-word;
  outline: none;
  font-size: var(--font-size);
  color: var(--font-color);
  display: flex;
  flex: 100%;
}

.active {
  background-color: var(--background-hover);
  box-shadow: var(--box-shadow);
  border-color: transparent;
}

.remove-bottom-radius {
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}

.suggestions {
  max-height: 400px;
  max-width: 100%;
  overflow-y: scroll;
  background-color: var(--background-hover);
  box-shadow: 0 5px 6px 0 var(--box-shadow-color);
  display: block;
  border-radius: 0 0 var(--border-radius) var(--border-radius);
}

.suggestions > ul {
  list-style: none;
  margin-top: 0;
}

.suggestions > ul > li {
  font-size: var(--font-size);
  color: var(--suggestion-color);
  margin: var(--suggestion-margin) 0 var(--suggestion-margin) 0;
  cursor: pointer;
  transition: color var(--transition);
}

.suggestions > ul > li:hover {
  color: var(--suggestion-hover);
}

